--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  font-family: Helvetica Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 500;
+
+}
